deploy/yaml/oscar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oscar
  namespace: oscar
spec:
  ports:
    - name: endpoint
      type: NodePort
      port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 8080
  selector:
    app: oscar
