deploy/yaml/oscar-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: oscar
  name: oscar
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: oscar
      port:
        number: 8080
