deploy/yaml/oscar-traefik-gateway.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: oscar
  name: cors-allow-all
spec:
  headers:
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList:
      - "*"
    accessControlMaxAge: 600
    addVaryHeader: true
    accessControlAllowMethods:
      - "GET"
      - "POST"
      - "PUT"
      - "DELETE"
      - "OPTIONS"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: oscar
  name: oscar
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: cors-allow-all
    backendRefs:
    - name: oscar
      port: 8080
